@@ -1,0 +1,5 @@
+package Test::Const::Exporter::Empty;
+
+use Const::Exporter;
+
+1;
